--- a/configs/tests/test_metals.yml
+++ b/configs/tests/test_metals.yml
@@ -28,7 +28,7 @@ slab_filters:
     filter_by_max_miller_index: 1
 
 adslab_prediction_steps:
-  - type: inference
+  - step_type: inference
     gpu: false
     batch_size: 4
     label: 'dE_gemnet_is2re_finetuned'
