--- a/configs/tests/test_cpu_relax.yml
+++ b/configs/tests/test_cpu_relax.yml
@@ -28,12 +28,12 @@ adslab_prediction_steps:
     label: 'dE_gemnet_is2re_finetuned'
     checkpoint_path: 'ocp_checkpoints/gemnet-is2re-finetuned-11-01.pt'
   - step_type: filter_by_adsorption_energy_target
-    adsorbate_smiles: *H
+    adsorbate_smiles: '*H'
     target_value: 0.0
     range_value: 0.5
     filter_column: 'min_dE_gemnet_is2re_finetuned'
   - step_type: filter_by_adsorption_energy_target
-    adsorbate_smiles: *CO
+    adsorbate_smiles: '*CO'
     target_value: -0.6
     range_value: 0.5
     filter_column: 'min_dE_gemnet_is2re_finetuned'
