--- a/configs/tests/test_gpu_relax.yml
+++ b/configs/tests/test_gpu_relax.yml
@@ -30,7 +30,7 @@ adslab_prediction_steps:
   - step_type: inference
     gpu: true
     batch_size: 4
-    label: 'dE_gemnet_relax'
-    checkpoint_path: 'ocp_checkpoints/public_checkpoints/gemnet_t_direct_h512_all.pt'
+    label: 'dE_gemnet_oc_large_s2ef_all_md'
+    checkpoint_path: 'ocp_checkpoints/public_checkpoints/gemnet_oc_large_s2ef_all_md.pt'
     number_steps: 10
 
