--- a/configs/automated_screens/intermetallics_HER.yml
+++ b/configs/automated_screens/intermetallics_HER.yml
@@ -7,11 +7,12 @@ input_options:
 output_options:
   pickle_final_output: False # True pickles the resulting predictions
   pickle_intermediate_outputs: True
-  run_name: 'HER_{{ GITHUB_RUN_ID }}'
+  run_name: 'intermetallics_HER_{{ GITHUB_RUN_ID }}'
   make_parity_plots: True
   verbose: False
 
 bulk_filters:
+  filter_by_element_groups: ['transition metal']
   filter_by_object_size: 60
   filter_by_pourbaix_stability: 
     max_decomposition_energy: 0.5
@@ -30,18 +31,8 @@ slab_filters:
   filter_by_max_miller_index: 1 # Planar surfaces only like Pt111
 
 adslab_prediction_steps:
-  - step_type: inference
-    gpu: true
-    batch_size: 8
-    label: 'dE_gemnet_is2re_finetuned'
-    checkpoint_path: 'ocp_checkpoints/private_checkpoints/gemnet-is2re-finetuned-11-01.pt'
-  - step_type: filter_by_adsorption_energy_target
-    adsorbate_smiles: '*H'
-    target_value: 0.0
-    filter_column: 'min_dE_gemnet_is2re_finetuned'
-  - step_type: inference
-    gpu: true
-    batch_size: 8
-    label: 'dE_gemnet_oc_large_s2ef_all_md'
-    checkpoint_path: 'ocp_checkpoints/public_checkpoints/gemnet_oc_large_s2ef_all_md.pt'
+- gpu: true
+  batch_size: 8
+  label: 'dE_gemnet_is2re_finetuned'
+  checkpoint_path: 'ocp_checkpoints/gemnet-is2re-finetuned-11-01.pt'
 
