--- a/configs/tests/test_metals.yml
+++ b/configs/tests/test_metals.yml
@@ -28,9 +28,8 @@ slab_filters:
     filter_by_max_miller_index: 1
 
 adslab_prediction_steps:
-  - step_type: inference
-    gpu: false
+  - gpu: false
     batch_size: 4
     label: 'dE_gemnet_is2re_finetuned'
-    checkpoint_path: 'ocp_checkpoints/private_checkpoints/gemnet-is2re-finetuned-11-01.pt'
+    checkpoint_path: 'ocp_checkpoints/gemnet-is2re-finetuned-11-01.pt'
 
