Revert "Revert "Implement adsorbate energy filters""

--- a/configs/tests/test_cpu_relax.yml
+++ b/configs/tests/test_cpu_relax.yml
@@ -12,23 +12,35 @@ input_options:
   adsorbate_file: 'catlas/adsorbate_structures/adsorbates.pkl'
 
 bulk_filters:
-    filter_by_bulk_ids: ['mp-81']
+    filter_by_bulk_ids: ['mp-81','mp-30']
 
 adsorbate_filters:
-    filter_by_smiles: ['*H']
+    filter_by_smiles: ['*H','*CO']
 
 slab_filters:
     filter_by_object_size: 100
     filter_by_max_miller_index: 1
 
 adslab_prediction_steps:
-  - gpu: false
+  - step_type: inference
+    gpu: false
     batch_size: 4
     label: 'dE_gemnet_is2re_finetuned'
-    checkpoint_path: 'ocp_checkpoints/gemnet-is2re-finetuned-11-01.pt'
-  - gpu: false
+    checkpoint_path: 'ocp_checkpoints/private_checkpoints/gemnet-is2re-finetuned-11-01.pt'
+  - step_type: filter_by_adsorption_energy_target
+    adsorbate_smiles: '*H'
+    target_value: 0.0
+    range_value: 0.2
+    filter_column: 'min_dE_gemnet_is2re_finetuned'
+  - step_type: filter_by_adsorption_energy_target
+    adsorbate_smiles: '*CO'
+    target_value: -0.6
+    range_value: 0.2
+    filter_column: 'min_dE_gemnet_is2re_finetuned'
+  - step_type: inference
+    gpu: false
     batch_size: 4
     label: 'dE_gemnet_relax'
-    checkpoint_path: 'ocp_checkpoints/gemnet_t_direct_h512_all.pt'
+    checkpoint_path: 'ocp_checkpoints/public_checkpoints/gemnet_t_direct_h512_all.pt'
     number_steps: 10
 
