change all ymls to new image, change import for mp_api

--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -4,8 +4,6 @@ on:
   workflow_dispatch:
     paths:
       - 'Dockerfile'
-    branches:
-      - 'main'
 
 jobs:
   docker:
@@ -28,4 +26,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ulissigroup/catlas:predictions
+          tags: ulissigroup/catlas:latest
