--- a/configs/dask_cluster/github_kube_cluster/scheduler.yml
+++ b/configs/dask_cluster/github_kube_cluster/scheduler.yml
@@ -11,7 +11,7 @@ spec:
             - 10gb
   restartPolicy: Never
   containers:
-  - image: ulissigroup/kubeflow:predictions
+  - image: ulissigroup/catlas:latest
     imagePullPolicy: Always
     args: [dask-scheduler]
     name: dask-worker
