--- a/.github/workflows/deploy_jupyter_book.yml
+++ b/.github/workflows/deploy_jupyter_book.yml
@@ -24,6 +24,7 @@ jobs:
         pip install jupyter-book
         pip install markupsafe==2.0.0
         pip install pygments -U
+        pip install sphinxcontrib-bibtex -U
         jupyter-book build documentation
 
     # Deploy the book's HTML to gh-pages branch
