initial docstrings - still need to resolve issues

--- a/documentation/_toc.yml
+++ b/documentation/_toc.yml
@@ -11,3 +11,6 @@ parts:
   - file: running_catlas
   - file: contributing
   - file: advanced_use
+- caption: docstrings
+  chapters:
+  - file: modules/filter_utils
