running on catlas image

--- a/.github/workflows/deploy_jupyter_book.yml
+++ b/.github/workflows/deploy_jupyter_book.yml
@@ -12,6 +12,13 @@ on:
 jobs:
   build-and-deploy-book:
     runs-on: ubuntu-latest
+    # Use a custom dockerfile for build
+    container:
+      image: docker://ulissigroup/catlas
+      options: --user root
+      credentials:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
    
     steps:
     - uses: actions/checkout@v3
