--- a/.github/workflows/deploy_jupyter_book.yml
+++ b/.github/workflows/deploy_jupyter_book.yml
@@ -28,6 +28,7 @@ jobs:
     # Build the book
     - name: Build the book
       run: |
+        python setup.py develop
         pip install jupyter-book
         pip install markupsafe==2.0.0
         pip install pygments -U
