--- a/.github/workflows/deploy_jupyter_book.yml
+++ b/.github/workflows/deploy_jupyter_book.yml
@@ -24,7 +24,7 @@ jobs:
     # Build the book
     - name: Build the book
       uses: actions/checkout@v3
-      run: |
+    - run: |
         python setup.py develop
         pip install jupyter-book
         pip install markupsafe==2.0.0
