--- a/.github/workflows/deploy_jupyter_book.yml
+++ b/.github/workflows/deploy_jupyter_book.yml
@@ -10,15 +10,11 @@ on:
 
 # This job installs dependencies, build the book, and pushes it to `gh-pages`
 jobs:
-  test_local_scheduler:
-    name: Test catlas with local scheduler
-
-    runs-on: [self-hosted, linux]
+  build_and_deploy_book:
+    runs-on: ubuntu-latest
 
     container:
       image: docker://ulissigroup/catlas:latest
-      volumes:
-        - /home/jovyan/shared-scratch:/home/jovyan/shared-scratch
 
     steps:
     # Build the book
