--- a/.github/workflows/deploy_jupyter_book.yml
+++ b/.github/workflows/deploy_jupyter_book.yml
@@ -20,7 +20,7 @@ jobs:
     # Build the book
     - uses: actions/checkout@v3
     - name: Build the book
-    - run: |
+      run: |
         pip install jupyter-book
         jupyter-book build documentation
 
