--- a/.github/workflows/deploy_jupyter_book.yml
+++ b/.github/workflows/deploy_jupyter_book.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Build the book
       uses: actions/checkout@v3
     - run: |
+        python setup.py develop
         jupyter-book build documentation
 
     # Deploy the book's HTML to gh-pages branch
