restricting actions to avoid useless runs

--- a/.github/workflows/deploy_jupyter_book.yml
+++ b/.github/workflows/deploy_jupyter_book.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'documentation/*'
       - '.github/workflows/deploy_jupyter_book.yml'
+      - 'catlas/*'
 
 # This job installs dependencies, build the book, and pushes it to `gh-pages`
 jobs:
