--- a/documentation/_toc.yml
+++ b/documentation/_toc.yml
@@ -9,6 +9,7 @@ parts:
   - file: installation_and_setup
   - file: making_a_config
   - file: running_catlas
+  - file: outputs
   - file: contributing
   - file: advanced_use
 - caption: docstrings
