making it so changes are built only for changes on main

--- a/.github/workflows/deploy_jupyter_book.yml
+++ b/.github/workflows/deploy_jupyter_book.yml
@@ -4,6 +4,8 @@ on:
   # Trigger the workflow on push to main branch
   workflow_dispatch:
   push:
+    branches:
+      - main
     paths:
       - 'documentation/*'
       - '.github/workflows/deploy_jupyter_book.yml'
