pushing initial changes

--- a/.github/workflows/test_catlas.yml
+++ b/.github/workflows/test_catlas.yml
@@ -17,6 +17,26 @@ on:
   workflow_dispatch:
 
 jobs:
+  test_enumeration:
+    name: Test catlas with local scheduler
+
+    runs-on: [self-hosted, linux]
+
+    container:
+      image: docker://ulissigroup/catlas:latest
+      volumes:
+        - /home/jovyan/shared-scratch:/home/jovyan/shared-scratch
+
+    steps:
+    - name: Run example predictions
+      uses: actions/checkout@v3
+    - run: |
+        (cd /home/jovyan/ocp && git pull)
+        ln -s /home/jovyan/shared-scratch/ocp_checkpoints
+        ln -s /home/jovyan/shared-scratch/catlas/df_pkls ./catlas/parity/
+        ln -s /home/jovyan/shared-scratch/catlas/pourbaix_diagrams ./catlas/
+        python setup.py develop
+        python bin/predictions.py configs/tests/test_metal_enum.yml configs/dask_cluster/local_cluster/local_cluster.py
   test_local_scheduler:
     name: Test catlas with local scheduler
 
