--- a/configs/tests/test_metal_enum.yml
+++ b/configs/tests/test_metal_enum.yml
@@ -9,7 +9,7 @@ output_options:
   verbose: False
 
 input_options:
-  bulk_file: 'catlas/bulk_structures/ocp_bulks_w_properties.db'
+  bulk_file: 'catlas/bulk_structures/ocp_bulks20220812.pkl'
   adsorbate_file: 'catlas/adsorbate_structures/adsorbates.pkl'
 
 bulk_filters:
