--- a/configs/automated_screens/intermetallics_CO2RR.yml
+++ b/configs/automated_screens/intermetallics_CO2RR.yml
@@ -1,7 +1,7 @@
 memory_cache_location: '/home/jovyan/shared-scratch/catlas/cache/'
 
 input_options:
-  bulk_file: 'catlas/bulk_structures/ocp_bulks_w_properties.db'
+  bulk_file: 'catlas/bulk_structures/ocp_bulks20220812.pkl'
   adsorbate_file: 'catlas/adsorbate_structures/adsorbates.pkl'
 
 output_options:
